1895.	[bug]		fctx_create() could return success even though it
			failed. [RT #14993]

1893.	[cleanup]	dighost.c: move external declarations into <dig/dig.h>.

1892.	[bug]		dnssec-signzone, dnssec-keygen, dnssec-signkey,
			dnssec-makekeyset: handle negative debug levels.
			[RT #14962]

1890.	[func]		Add a system test for named-checkconf. [RT #14931]

1886.	[bug]		Fix unreasonably low quantum on call to
			dns_rbt_destroy2().  Remove unnecessay unhash_node()
			call. [RT #14919]

1884.	[bug]		process_dhtkey() was using the wrong memory context
			to free some memory. [RT #14890]

1882.	[port]		win32: isc__errno2result() now reports its caller.
			[RT #13753]

1881.	[port]		win32: Handle ERROR_NETNAME_DELETED.  [RT #13753]

1880.	[bug]		dnssec_makekeyset and dnssec-signkey failed to
			initalize the hash context. [RT #13771]

1865.	[bug]		Silently ignore nameservers in /etc/resolv.conf with
			bad addresses. [RT #14841]

1861.	[bug]		dig could trigger a INSIST on certain malformed
			responses. [RT #14801]

1860.	[port]		solaris 2.8: hack_shutup_pthreadmutexinit was
			incorrectly set. [RT #14775]

1856.	[doc]		Switch Docbook toolchain from DSSSL to XSL.
			[RT #11398]

1854.	[bug]		lwres also needs to know the print format for
			(long long).  [RT #13754]

1850.	[bug]		Memory leak in lwres_getipnodebyaddr(). [RT #14591]

1849.	[doc]		All forms of the man pages (docbook, man, html) should
			have consistant copyright dates.

1848.	[bug]		Improve SMF integration. [RT #13238]

1847.	[bug]		isc_ondestroy_init() is called too late in
			dns_rbtdb_create()/dns_rbtdb64_create(). 
			[RT #13661]
			
1846.	[contrib]	query-loc-0.3.0 from Stephane Bortzmeyer
			<bortzmeyer@nic.fr>.

1845.	[bug]		Improve error reporting to distingish between
			accept()/fcntl() and socket()/fcntl() errors.
			[RT #13745]

1844.	[bug]		inet_pton() accepted more that 4 hexadecimal digits
			for each 16 bit piece of the IPv6 address.  The text
			representation of a IPv6 address has been tighted