@@ -1,3 +1,6 @@
+1896.	[bug]		The cache could delete expired records too fast for
+			clients with a virtual time in the past. [RT #14991]
+
 1895.	[bug]		fctx_create() could return success even though it
 			failed. [RT #14993]
 
